<resources>
    <string name="app_name">MountainApp</string>
    <string name="google_maps_api_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCcFGskhAGAU_yXmLWgZR9yPxv-Dyd2QEg</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_in_register">Register</string>
    <string name="action_sign_in_forgot_password">Forgot your password?</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>


    <string name="title_activity_home">HomeActivity</string>
    <string name="title_home">Home</string>
    <string name="title_search">Search</string>
    <string name="title_menu">Menu</string>

    <string name="marker_background">markerBackground</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_hike_map">HikeMapActivity</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="title_activity_register_name">RegisterNameActivity</string>
    <string name="title_activity_register_email">RegisterEmailActivity</string>
    <string name="title_activity_register_password">RegisterPasswordActivity</string>
    <string name="title_activity_register_birthday_and_gender">RegisterBirthdayAndGenderActivity
    </string>
    <string name="title_activity_register_succesfully">RegisterSuccesfullyActivity</string>
    <string name="title_activity_forgot_password">ForgotPassword</string>
    <string name="title_activity_emergency">EmergencyActivity</string>
    <string name="title_activity_area_map">AreaMapActivity</string>
</resources>
